tests/invalid/annotation_callable_missing_tuple/main.py
def bad(x: callable[int]) -> None:
    x


def main() -> None:
    y: int = 0
